--- a/Template/Dockerfile
+++ b/Template/Dockerfile
@@ -1,13 +1,13 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
+# Use the base image for .NET 6
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+# Install dependencies for PDF generation
+RUN apt-get update && apt-get install -y libgdiplus libc6-dev
+
+# Build stage
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
@@ -17,11 +17,12 @@ COPY . .
 WORKDIR "/src/Template"
 RUN dotnet build "./Template.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
+# Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./Template.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-RUN apt-get update && apt-get install -y libgdiplus libc6-dev
 
+# Final stage
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
