--- a/Template/Dockerfile
+++ b/Template/Dockerfile
@@ -26,4 +26,6 @@ RUN dotnet publish "./Template.csproj" -c $BUILD_CONFIGURATION -o /app/publish /
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+# Set environment variable for Development mode
+ENV ASPNETCORE_ENVIRONMENT=Development
 ENTRYPOINT ["dotnet", "Template.dll"]
